<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterPage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/coverArt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/track_cover_art_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pending_dark" />

    <TextView
        android:id="@+id/trackTitle"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/loading_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintStart_toEndOf="@+id/coverArt"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Track Title" />

    <TextView
        android:id="@+id/trackArtists"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/loading_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintStart_toEndOf="@+id/coverArt"
        tools:text="Artists" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/track_play_button_description"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>