<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".OtherUserActivity">

    <TextView
        android:id="@+id/tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracks"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracks" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/userRating"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/playlistDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playlistDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="This is a playlist.\nThis is a description of the playlist.\nHere are more lines of text.\nPlaceholder." />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/average_rating"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/userRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>